--- a/LunarMissionDesign/DataFeederActorGoalList.tex
+++ b/LunarMissionDesign/DataFeederActorGoalList.tex
@@ -10,8 +10,11 @@
 \begin{tabular}{|p{5cm}|p{5cm}|}\hline
 \textbf{Actor}&\textbf{Goal}\\\hline
 (Lunar Mission) System & Request Mission Data\\\hline
-(Lunar Mission) System Admistrator & Load Mission Data Parameters
-\\\hline
+(Lunar Mission) System Administrator & Select Simulation Mode\\\hline
+(Lunar Mission) System Administrator & Communicate Parameter Files to
+the (Lunar Mission) System for the System to load\\\hline
+(Lunar Mission) System & Send Parameter Files to load for
+simulation\\\hline
 \end{tabular}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
