--- a/LunarMissionDesign/DataFeederUseCase_1_RequestMissionData_FullyDressed.tex
+++ b/LunarMissionDesign/DataFeederUseCase_1_RequestMissionData_FullyDressed.tex
@@ -20,7 +20,8 @@ Parameter File},\textit{Use Case 3:  Start the Data Feeder}\\
    \item Engineers/Tecnincians:  Wants a simulation agnostic to source
 \end{itemize}
 \textbf{Pre-Conditions:  }Data Feeder is started, Parameter File is
-loaded, Data Feeder is generating required mission data, (Lunaar
+loaded, Data Feeder is generating required mission data
+\textit{See Use Case 2:  Request to Load Parameter File}, (Lunar
 Mission) System is running.\\
 \textbf{Post-Conditions:  }Requested Data Returned to the (Lunar
 Mission) System\\\\
