--- a/LunarMissionDesign/DataFeederUseCase_2_RequestToLoadParameterFile_Brief.tex
+++ b/LunarMissionDesign/DataFeederUseCase_2_RequestToLoadParameterFile_Brief.tex
@@ -8,7 +8,7 @@
 \textbf{Request to load Parameter File--Brief Format}
 \begin{enumerate}
    \item With the Data Feeder running, the (Lunar Mission) System/
-      System Administrator Requests the Data Feeder Load a
+      System Administrator Requests the Data Feeder load a
       Parameter File
    \item The System/System Administrator sends the name and location
       of the Parameter File to the Data Feeder
