--- a/LunarMissionDesign/DataFeederUseCase_2_RequestToLoadParameterFile_FullyDressed.tex
+++ b/LunarMissionDesign/DataFeederUseCase_2_RequestToLoadParameterFile_FullyDressed.tex
@@ -32,8 +32,6 @@ Parameter File\\\\
    & 4.  Reads the Parameter File\\\hline
    & 5.  Loads the Mission Data Parameters with the data from the
    Parameter file\\\hline
-   & 6.  Periodically generates Mission Data based on the Parameter
-   File Inputs\\\hline
 \end{tabular}\\\\
 \textbf{Alternative Flows:}
 \begin{itemize}
@@ -57,9 +55,7 @@ Parameter File\\\\
 \end{itemize}
 \textbf{Open Issues}
 \begin{itemize}
-   \item[6a]  Technically this Flow is an addition to the Use Case
-      Flow of events, and would be metioned in this section (as it
-      is now)
+   \item None
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
